task3-zero-trust-mesh/authz-allow-reporting.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-reporting-to-ledger-api
  namespace: payments
spec:
  selector:
    matchLabels:
      app: ledger-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/payments/sa/reporting"
      to:
        - operation:
            methods: ["GET"]
            paths: ["/health", "/fetch"]
