task3-zero-trust-mesh/authz-default-deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-deny-all
  namespace: payments
spec:
  {}
